Update and rename 2022-05-22-Gomindeul.md to 2022-05-22-Web-Pj-1.md

--- a/all_collections/_posts/2022-05-22-Web-Pj-1.md
+++ b/all_collections/_posts/2022-05-22-Web-Pj-1.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Gomindeul
+title: 첫 웹사이트 고민들
 date: 2022-05-22
 categories: Web_Project
 ---
 
-# 첫번째 프론트엔드 : 고민들
+# 첫번째 웹사이트 : 고민들
 
 프로젝트 기획부터 많이 힘들었던 작업이었다.
 애초에 웹개발 지식이 전무하기도 하였고 맨날 파이썬, C만 만져댔으니 
